# digin

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  PRD.md  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
config/: default.json  prompt.txt
docs/: PRD.md  architecture-guide.md  code-review-src.md  onboarding-map-enhancement-plan.md  review.md
scripts/: analyze_logs.py
src/: __init__.py  __main__.py  __version__.py  aggregator.py  ai_client.py  analyzer.py  cache.py  config.py  logger.py  project_map.py  traverser.py
tests/: __init__.py  test_aggregator_narrative.py  test_ai_client.py  test_analyzer.py  test_cache.py  test_config.py  test_logger.py  test_project_map.py  test_traverser.py  test_web_project_map.py
web/: __init__.py  __main__.py  server.py
web/static/: app.js  index.html  style.css
